--- a/frontend/src/app/layout/side-nav-bar/side-nav-bar.component.html
+++ b/frontend/src/app/layout/side-nav-bar/side-nav-bar.component.html
@@ -1,1 +1,16 @@
-<p>side-nav-bar works!</p>
+<mat-sidenav-container class="h-full w-full">
+  <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches">
+    <mat-nav-list>
+      <a mat-list-item class="flex flex-row gap-1" *ngFor="let nav of navItems" [routerLink]="nav.route">
+        <div class="flex flex-auto gap-2">
+          <mat-icon>{{ nav.icon }}</mat-icon>
+          <span>{{ nav.label }}</span>
+        </div>
+      </a>
+    </mat-nav-list>
+  </mat-sidenav>
+
+  <mat-sidenav-content>
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
