--- a/frontend/src/app/layout/tool-bar/tool-bar.component.html
+++ b/frontend/src/app/layout/tool-bar/tool-bar.component.html
@@ -1,13 +1,18 @@
+<!-- tool-bar.component.html -->
 <mat-toolbar>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-      <mat-icon>menu</mat-icon>
-    </button>
-    <span>My App</span>
-    <span class="example-spacer"></span>
-    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-      <mat-icon>favorite</mat-icon>
-    </button>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-      <mat-icon>share</mat-icon>
-    </button>
-  </mat-toolbar>
+  <button (click)="onToggleSideNav()" mat-icon-button aria-label="Menu">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <span>My App</span>
+  <span class="example-spacer"></span>
+
+  <!-- Profile Menu -->
+  <button mat-icon-button [matMenuTriggerFor]="profileMenu" aria-label="Profile">
+    <mat-icon>account_circle</mat-icon>
+  </button>
+  <mat-menu #profileMenu="matMenu">
+    <button mat-menu-item (click)="updateProfile()">Update Profile</button>
+    <button mat-menu-item (click)="updateProfile()">Log Out</button>
+    <!-- Add more menu items as needed -->
+  </mat-menu>
+</mat-toolbar>
