--- a/frontend/src/app/feature/list-projects/create-update-projects/create-update-projects.component.html
+++ b/frontend/src/app/feature/list-projects/create-update-projects/create-update-projects.component.html
@@ -1,1 +1,18 @@
-<p>create-update-projects works!</p>
+<div class="h-full m-3 overflow-hidden">
+    <div class="flex flex-row items-center justify-center">
+        <h1 class="mat-dialog-title">Create</h1>
+        <mat-icon class="ml-auto" mat-dialog-close>close</mat-icon>
+    </div>
+    <div class="mat-dialog-content">
+        <form [formGroup]="form">
+            <mat-form-field appearance="fill">
+                <mat-label>Name</mat-label>
+                <input formControlName="name" matInput placeholder="Placeholder">
+            </mat-form-field>
+        </form>
+    </div>
+    <div class="mat-dialog-actions">
+        <button mat-raised-button color="primary" (click)="save()" [disabled]="!form.valid">Submit</button>
+        <button mat-button mat-dialog-close>Cancel</button>
+    </div>
+</div>
