--- a/frontend/src/app/feature/list-projects/list-projects.component.html
+++ b/frontend/src/app/feature/list-projects/list-projects.component.html
@@ -1,50 +1,56 @@
-<div class="w-full">
-    <div class="w-full flex pt-2">
-        <mat-form-field>
-            <mat-label>Filter</mat-label>
-            <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
-        </mat-form-field>
-        <button (click)="createUpdateProject()" class="ml-auto" mat-flat-button color="primary">Create</button>
+<div class="h-full w-full p-2">
+    <div class="flex flex-row items-center">
+        <h1>Projects</h1>
+        <button class="ml-auto" (click)="createProject()" color="primary" mat-flat-button>Create</button>
     </div>
+    <div>
+        <mat-table [dataSource]="dataSource" matSort>
 
-    <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" matSort>
-
-            <!-- ID Column -->
-            <ng-container matColumnDef="id">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-                <td mat-cell *matCellDef="let row"> {{row.id}} </td>
-            </ng-container>
-
-            <!-- Progress Column -->
-            <ng-container matColumnDef="progress">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Progress </th>
-                <td mat-cell *matCellDef="let row"> {{row.progress}}% </td>
+            <!-- Checkbox Column -->
+            <ng-container matColumnDef="checkbox">
+                <mat-header-cell *matHeaderCellDef>
+                    <mat-checkbox color="primary">Select All</mat-checkbox>
+                </mat-header-cell>
+                <mat-cell *matCellDef="let user">
+                    <mat-checkbox color="primary" [checked]="selection.isSelected(user)"></mat-checkbox>
+                </mat-cell>
             </ng-container>
 
             <!-- Name Column -->
             <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-                <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
+                <mat-cell *matCellDef="let user"> {{ user.name }} </mat-cell>
             </ng-container>
 
-            <!-- Fruit Column -->
-            <ng-container matColumnDef="fruit">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Fruit </th>
-                <td mat-cell *matCellDef="let row"> {{row.fruit}} </td>
+            <!-- Email Column -->
+            <ng-container matColumnDef="email">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Email </mat-header-cell>
+                <mat-cell *matCellDef="let user"> {{ user.email }} </mat-cell>
             </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            <!-- Actions Column -->
+            <ng-container matColumnDef="actions">
+                <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
+                <mat-cell *matCellDef="let user">
+                    <button mat-icon-button (click)="edit(user)">
+                        <mat-icon>edit</mat-icon>
+                    </button>
+                    <button mat-icon-button (click)="delete(user)">
+                        <mat-icon>delete</mat-icon>
+                    </button>
+                </mat-cell>
+            </ng-container>
 
-            <!-- Row shown when there is no matching data. -->
-            <tr class="mat-row" *matNoDataRow>
-                <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-            </tr>
-        </table>
+            <!-- Header and Row Definitions -->
+            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
 
-        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+        </mat-table>
+
+        <!-- Paginator -->
+        <mat-paginator [length]="totalRecords" [pageSizeOptions]="pageSizeOptions" [pageSize]="pageSize">
+            <!-- (page)="pageChanged($event)" -->
+        </mat-paginator>
     </div>
-
 
 </div>
