--- a/frontend/src/app/feature/users-list/users-list.component.html
+++ b/frontend/src/app/feature/users-list/users-list.component.html
@@ -1,51 +1,56 @@
-<div class="ml-2">
-    <h2>Users</h2>
-    <mat-table [dataSource]="dataSource" matSort>
+<div class="h-full w-full p-2">
+    <div class="flex flex-row items-center">
+        <h1>Users</h1>
+        <button class="ml-auto" color="primary" mat-flat-button>Create</button>
+    </div>
+    <div>
+        <mat-table [dataSource]="dataSource" matSort>
 
-        <!-- Checkbox Column -->
-        <ng-container matColumnDef="checkbox">
-            <mat-header-cell *matHeaderCellDef>
-                <mat-checkbox color="primary">Select All</mat-checkbox>
-            </mat-header-cell>
-            <mat-cell *matCellDef="let user">
-                <mat-checkbox color="primary" [checked]="selection.isSelected(user)"></mat-checkbox>
-            </mat-cell>
-        </ng-container>
+            <!-- Checkbox Column -->
+            <ng-container matColumnDef="checkbox">
+                <mat-header-cell *matHeaderCellDef>
+                    <mat-checkbox color="primary">Select All</mat-checkbox>
+                </mat-header-cell>
+                <mat-cell *matCellDef="let user">
+                    <mat-checkbox color="primary" [checked]="selection.isSelected(user)"></mat-checkbox>
+                </mat-cell>
+            </ng-container>
 
-        <!-- Name Column -->
-        <ng-container matColumnDef="name">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
-            <mat-cell *matCellDef="let user"> {{ user.name }} </mat-cell>
-        </ng-container>
+            <!-- Name Column -->
+            <ng-container matColumnDef="name">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
+                <mat-cell *matCellDef="let user"> {{ user.name }} </mat-cell>
+            </ng-container>
 
-        <!-- Email Column -->
-        <ng-container matColumnDef="email">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Email </mat-header-cell>
-            <mat-cell *matCellDef="let user"> {{ user.email }} </mat-cell>
-        </ng-container>
+            <!-- Email Column -->
+            <ng-container matColumnDef="email">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Email </mat-header-cell>
+                <mat-cell *matCellDef="let user"> {{ user.email }} </mat-cell>
+            </ng-container>
 
-        <!-- Actions Column -->
-        <ng-container matColumnDef="actions">
-            <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
-            <mat-cell *matCellDef="let user">
-                <button mat-icon-button (click)="edit(user)">
-                    <mat-icon>edit</mat-icon>
-                </button>
-                <button mat-icon-button (click)="delete(user)">
-                    <mat-icon>delete</mat-icon>
-                </button>
-            </mat-cell>
-        </ng-container>
+            <!-- Actions Column -->
+            <ng-container matColumnDef="actions">
+                <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
+                <mat-cell *matCellDef="let user">
+                    <button mat-icon-button (click)="edit(user)">
+                        <mat-icon>edit</mat-icon>
+                    </button>
+                    <button mat-icon-button (click)="delete(user)">
+                        <mat-icon>delete</mat-icon>
+                    </button>
+                </mat-cell>
+            </ng-container>
 
-        <!-- Header and Row Definitions -->
-        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+            <!-- Header and Row Definitions -->
+            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
 
-    </mat-table>
+        </mat-table>
 
-    <!-- Paginator -->
-    <mat-paginator [length]="totalRecords" [pageSizeOptions]="pageSizeOptions" [pageSize]="pageSize">
-        <!-- (page)="pageChanged($event)" -->
-    </mat-paginator>
+        <!-- Paginator -->
+        <mat-paginator [length]="totalRecords" [pageSizeOptions]="pageSizeOptions" [pageSize]="pageSize">
+            <!-- (page)="pageChanged($event)" -->
+        </mat-paginator>
+    </div>
 
 </div>
