--- a/frontend/src/app/autherization/login/login.component.html
+++ b/frontend/src/app/autherization/login/login.component.html
@@ -4,7 +4,7 @@
         <div class="flex flex-col">
             <mat-form-field appearance="fill">
                 <mat-label>Enter Email</mat-label>
-                <input formControlName="username" matInput placeholder="Enter">
+                <input formControlName="userName" matInput placeholder="Enter">
             </mat-form-field>
             <mat-form-field appearance="fill">
                 <mat-label>Enter password</mat-label>
