--- a/frontend/src/app/feature/organization-list/organization-list.component.html
+++ b/frontend/src/app/feature/organization-list/organization-list.component.html
@@ -4,7 +4,7 @@
         <button class="ml-auto" color="primary" mat-flat-button>Create</button>
     </div>
     <div>
-        <mat-table [dataSource]="dataSource" matSort>
+        <mat-table [dataSource]="dataSourcea" matSort>
 
             <!-- Checkbox Column -->
             <ng-container matColumnDef="checkbox">
@@ -18,10 +18,15 @@
     
             <!-- Name Column -->
             <ng-container matColumnDef="name">
-                <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
-                <mat-cell *matCellDef="let user"> {{ user.name }} </mat-cell>
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Organization Name </mat-header-cell>
+                <mat-cell *matCellDef="let user"> {{ user.organizationName }} </mat-cell>
             </ng-container>
-    
+           <!-- Name Column -->
+           <ng-container matColumnDef="isMainBranch">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> isMainBranch </mat-header-cell>
+            <mat-cell *matCellDef="let user"> {{ user.isMainBranch?'Yes':'No' }} </mat-cell>
+        </ng-container>
+
             <!-- Email Column -->
             <ng-container matColumnDef="email">
                 <mat-header-cell *matHeaderCellDef mat-sort-header> Email </mat-header-cell>
