--- a/frontend/src/app/feature/list-projects/list-projects.component.html
+++ b/frontend/src/app/feature/list-projects/list-projects.component.html
@@ -4,40 +4,60 @@
         <button class="ml-auto" (click)="createProject()" color="primary" mat-flat-button>Create</button>
     </div>
     <div>
-        <mat-table [dataSource]="dataSource" matSort>
+        <mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)">
 
             <!-- Checkbox Column -->
             <ng-container matColumnDef="checkbox">
                 <mat-header-cell *matHeaderCellDef>
-                    <mat-checkbox color="primary">Select All</mat-checkbox>
+                    <mat-checkbox color="primary" (change)="$event ? masterToggle() : null"
+                                  [checked]="isAllSelected()"
+                                  [indeterminate]="selection.hasValue() && !isAllSelected()">
+                    </mat-checkbox>
                 </mat-header-cell>
-                <mat-cell *matCellDef="let user">
-                    <mat-checkbox color="primary" [checked]="selection.isSelected(user)"></mat-checkbox>
+                <mat-cell *matCellDef="let row">
+                    <mat-checkbox color="primary" (click)="$event.stopPropagation()"
+                                  (change)="$event ? selection.toggle(row) : null"
+                                  [checked]="selection.isSelected(row)">
+                    </mat-checkbox>
                 </mat-cell>
             </ng-container>
 
             <!-- Name Column -->
             <ng-container matColumnDef="name">
-                <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Project Name </mat-header-cell>
                 <mat-cell *matCellDef="let user"> {{ user.name }} </mat-cell>
             </ng-container>
-
-            <!-- Email Column -->
-            <ng-container matColumnDef="email">
-                <mat-header-cell *matHeaderCellDef mat-sort-header> Email </mat-header-cell>
-                <mat-cell *matCellDef="let user"> {{ user.email }} </mat-cell>
+            <!-- <ng-container matColumnDef="status">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Status </mat-header-cell>
+                <mat-cell *matCellDef="let user"> {{ user.status }} </mat-cell>
+            </ng-container> -->
+            <ng-container matColumnDef="status">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Status </mat-header-cell>
+                <mat-cell *matCellDef="let row">
+                  <span [ngStyle]="{ 'background-color': getStatusColor(row.status) }" class="text-white rounded-sm p-1">
+                    {{ getStatusName(row.status) }}
+                  </span>
+                </mat-cell>
+              </ng-container>
+              
+              
+            <!-- User Column -->
+            <ng-container matColumnDef="user">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> User Name </mat-header-cell>
+                <mat-cell *matCellDef="let row"> {{ row.user.userName }} </mat-cell>
             </ng-container>
 
             <!-- Actions Column -->
             <ng-container matColumnDef="actions">
                 <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
-                <mat-cell *matCellDef="let user">
-                    <button mat-icon-button (click)="edit(user)">
-                        <mat-icon>edit</mat-icon>
+                <mat-cell *matCellDef="let row">
+                    <button mat-icon-button (click)="edit(row)">
+                        <mat-icon >edit</mat-icon>
                     </button>
-                    <button mat-icon-button (click)="delete(user)">
-                        <mat-icon>delete</mat-icon>
+                    <button mat-icon-button (click)="deleteProject(row)">
+                        <mat-icon >delete</mat-icon>
                     </button>
+                    <button mat-raised-button color="primary" (click)="automationProgress(row)">Test</button>
                 </mat-cell>
             </ng-container>
 
@@ -48,9 +68,10 @@
         </mat-table>
 
         <!-- Paginator -->
-        <mat-paginator [length]="totalRecords" [pageSizeOptions]="pageSizeOptions" [pageSize]="pageSize">
-            <!-- (page)="pageChanged($event)" -->
+        <mat-paginator [length]="totalRecords" 
+                       [pageSizeOptions]="pageSizeOptions" 
+                       [pageSize]="pageSize" 
+                       (page)="handlePageBottom($event)">
         </mat-paginator>
     </div>
-
 </div>
