--- a/frontend/src/app/feature/organization-list/organization-list.component.html
+++ b/frontend/src/app/feature/organization-list/organization-list.component.html
@@ -1,60 +1,68 @@
-<div class="w-full h-full p-2">
+<div class="h-full w-full p-2">
     <div class="flex flex-row items-center">
         <h1>Organization</h1>
-        <button class="ml-auto" color="primary" mat-flat-button>Create</button>
+        <button class="ml-auto"  color="primary" mat-flat-button>Create</button>
     </div>
     <div>
-        <mat-table [dataSource]="dataSourcea" matSort>
+        <mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)">
 
             <!-- Checkbox Column -->
             <ng-container matColumnDef="checkbox">
                 <mat-header-cell *matHeaderCellDef>
-                    <mat-checkbox color="primary">Select All</mat-checkbox>
+                    <mat-checkbox color="primary" (change)="$event ? masterToggle() : null"
+                                  [checked]="isAllSelected()"
+                                  [indeterminate]="selection.hasValue() && !isAllSelected()">
+                    </mat-checkbox>
                 </mat-header-cell>
-                <mat-cell *matCellDef="let user">
-                    <mat-checkbox color="primary" [checked]="selection.isSelected(user)"></mat-checkbox>
+                <mat-cell *matCellDef="let row">
+                    <mat-checkbox color="primary" (click)="$event.stopPropagation()"
+                                  (change)="$event ? selection.toggle(row) : null"
+                                  [checked]="selection.isSelected(row)">
+                    </mat-checkbox>
                 </mat-cell>
             </ng-container>
-    
+
             <!-- Name Column -->
             <ng-container matColumnDef="name">
                 <mat-header-cell *matHeaderCellDef mat-sort-header> Organization Name </mat-header-cell>
                 <mat-cell *matCellDef="let user"> {{ user.organizationName }} </mat-cell>
             </ng-container>
-           <!-- Name Column -->
-           <ng-container matColumnDef="isMainBranch">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> isMainBranch </mat-header-cell>
-            <mat-cell *matCellDef="let user"> {{ user.isMainBranch?'Yes':'No' }} </mat-cell>
-        </ng-container>
-
-            <!-- Email Column -->
+            <ng-container matColumnDef="isMainBranch">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Main Branch </mat-header-cell>
+                <mat-cell *matCellDef="let user"> {{ user.isMainBranch?'Yes':'No' }} </mat-cell>
+            </ng-container>
             <ng-container matColumnDef="email">
                 <mat-header-cell *matHeaderCellDef mat-sort-header> Email </mat-header-cell>
                 <mat-cell *matCellDef="let user"> {{ user.email }} </mat-cell>
             </ng-container>
-    
+            <ng-container matColumnDef="activated">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Status </mat-header-cell>
+                <mat-cell *matCellDef="let user"> {{ user.activated?'Active':'In-Active' }} </mat-cell>
+            </ng-container>
             <!-- Actions Column -->
             <ng-container matColumnDef="actions">
                 <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
                 <mat-cell *matCellDef="let user">
                     <button mat-icon-button (click)="edit(user)">
-                        <mat-icon>edit</mat-icon>
+                        <mat-icon >edit</mat-icon>
                     </button>
                     <button mat-icon-button (click)="delete(user)">
-                        <mat-icon>delete</mat-icon>
+                        <mat-icon >delete</mat-icon>
                     </button>
                 </mat-cell>
             </ng-container>
-    
+
             <!-- Header and Row Definitions -->
             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
             <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-    
+
         </mat-table>
-    
+
         <!-- Paginator -->
-        <mat-paginator [length]="totalRecords" [pageSizeOptions]="pageSizeOptions" [pageSize]="pageSize">
-            <!-- (page)="pageChanged($event)" -->
+        <mat-paginator [length]="totalRecords" 
+                       [pageSizeOptions]="pageSizeOptions" 
+                       [pageSize]="pageSize" 
+                       (page)="handlePageBottom($event)">
         </mat-paginator>
     </div>
 </div>
