--- a/frontend/src/app/feature/list-projects/list-projects.component.html
+++ b/frontend/src/app/feature/list-projects/list-projects.component.html
@@ -9,15 +9,13 @@
             <!-- Checkbox Column -->
             <ng-container matColumnDef="checkbox">
                 <mat-header-cell *matHeaderCellDef>
-                    <mat-checkbox color="primary" (change)="$event ? masterToggle() : null"
-                                  [checked]="isAllSelected()"
-                                  [indeterminate]="selection.hasValue() && !isAllSelected()">
+                    <mat-checkbox color="primary" (change)="$event ? masterToggle() : null" [checked]="isAllSelected()"
+                        [indeterminate]="selection.hasValue() && !isAllSelected()">
                     </mat-checkbox>
                 </mat-header-cell>
                 <mat-cell *matCellDef="let row">
                     <mat-checkbox color="primary" (click)="$event.stopPropagation()"
-                                  (change)="$event ? selection.toggle(row) : null"
-                                  [checked]="selection.isSelected(row)">
+                        (change)="$event ? selection.toggle(row) : null" [checked]="selection.isSelected(row)">
                     </mat-checkbox>
                 </mat-cell>
             </ng-container>
@@ -34,13 +32,14 @@
             <ng-container matColumnDef="status">
                 <mat-header-cell *matHeaderCellDef mat-sort-header> Status </mat-header-cell>
                 <mat-cell *matCellDef="let row">
-                  <span [ngStyle]="{ 'background-color': getStatusColor(row.status) }" class="text-white rounded-sm p-1">
-                    {{ getStatusName(row.status) }}
-                  </span>
+                    <span [ngStyle]="{ 'background-color': getStatusColor(row.status) }"
+                        class="text-white rounded-sm p-1">
+                        {{ getStatusName(row.status) }}
+                    </span>
                 </mat-cell>
-              </ng-container>
-              
-              
+            </ng-container>
+
+
             <!-- User Column -->
             <ng-container matColumnDef="user">
                 <mat-header-cell *matHeaderCellDef mat-sort-header> User Name </mat-header-cell>
@@ -52,10 +51,10 @@
                 <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
                 <mat-cell *matCellDef="let row">
                     <button mat-icon-button (click)="edit(row)">
-                        <mat-icon >edit</mat-icon>
+                        <mat-icon>edit</mat-icon>
                     </button>
                     <button mat-icon-button (click)="deleteProject(row)">
-                        <mat-icon >delete</mat-icon>
+                        <mat-icon>delete</mat-icon>
                     </button>
                     <button mat-raised-button color="primary" (click)="automationProgress(row)">Test</button>
                 </mat-cell>
@@ -64,14 +63,12 @@
             <!-- Header and Row Definitions -->
             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
             <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-
         </mat-table>
+        <div class="text-center bg-white" *ngIf="dataSource.data.length ===0">No Record Found</div>
 
         <!-- Paginator -->
-        <mat-paginator [length]="totalRecords" 
-                       [pageSizeOptions]="pageSizeOptions" 
-                       [pageSize]="pageSize" 
-                       (page)="handlePageBottom($event)">
+        <mat-paginator [length]="totalRecords" [pageSizeOptions]="pageSizeOptions" [pageSize]="pageSize"
+            (page)="handlePageBottom($event)">
         </mat-paginator>
     </div>
 </div>
