--- a/frontend/src/app/feature/users-list/users-list.component.html
+++ b/frontend/src/app/feature/users-list/users-list.component.html
@@ -61,6 +61,7 @@
             <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
 
         </mat-table>
+        <div class="text-center bg-white" *ngIf="dataSource.data.length ===0">No Record Found</div>
 
         <!-- Paginator -->
         <mat-paginator [length]="totalRecords" 
